# BFG_9000

./: CMakeLists.txt  Makefile  Makefile_backup  bfg9000
includes/: game.h
mlx/mlx_linux/: Makefile  Makefile.gen  Makefile.mk  mlx_init.c  mlx_lib_xpm.c
mlx/mlx_linux/test/: mlx-test
srcs/: close.c  image.c  main.c
